# docs/openapi.json
@@ -4547,107 +4547,6 @@
         ]
       }
     },
-    "/api/hermes/group-chat/rooms/{roomId}/channels": {
-      "get": {
-        "tags": [
-          "Group Chat"
-        ],
-        "summary": "Get channels",
-        "description": "GET /api/hermes/group-chat/rooms/:roomId/channels",
-        "operationId": "getChannels",
-        "security": [
-          {
-            "BearerAuth": []
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Success"
-          },
-          "401": {
-            "$ref": "#/components/responses/Unauthorized"
-          },
-          "404": {
-            "description": "Not found"
-          }
-        },
-        "parameters": [
-          {
-            "name": "roomId",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ]
-      },
-      "post": {
-        "tags": [
-          "Group Chat"
-        ],
-        "summary": "Create channels",
-        "description": "POST /api/hermes/group-chat/rooms/:roomId/channels",
-        "operationId": "createChannels",
-        "security": [
-          {
-            "BearerAuth": []
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Success"
-          },
-          "400": {
-            "$ref": "#/components/responses/BadRequest"
-          },
-          "401": {
-            "$ref": "#/components/responses/Unauthorized"
-          }
-        },
-        "parameters": [
-          {
-            "name": "roomId",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "id": {
-                    "type": "string"
-                  },
-                  "kind": {
-                    "type": "string"
-                  },
-                  "members": {
-                    "type": "string"
-                  },
-                  "metadata": {
-                    "type": "string"
-                  },
-                  "name": {
-                    "type": "string"
-                  }
-                },
-                "required": [
-                  "kind",
-                  "name"
-                ]
-              }
-            }
-          }
-        }
-      }
-    },
     "/api/hermes/group-chat/rooms/{roomId}/clear-context": {
       "post": {
         "tags": [
